<resources>
    <string name="app_name">Stoup</string>
    <string name="masuk">Masuk</string>
    <string name="daftar">Daftar</string>
    <string name="simple_caption">Welcome StoUser!</string>
    <string name="register">Register</string>
    <string name="have_acc">Already have an account? Login here</string>
    <string name="simple_caption1">Register to continue</string>
    <string name="email_hint">example@gmail.com</string>
    <string name="email_error">Invalid email</string>
    <string name="password_error">Password must be at least 8 characters</string>
    <string name="simple_caption2">Login to continue</string>
    <string name="login">Login</string>
    <string name="hint_password">Enter your password</string>
    <string name="tv_email">Email:</string>
    <string name="tv_pw">Password:</string>
    <string name="story_image">img story</string>
    <string name="title_story">Title</string>
    <string name="description_story">Description</string>
    <string name="add_story">Add story</string>
    <string name="select_image">Select image</string>
    <string name="camera">Camera</string>
    <string name="use_my_location">Use current location</string>
    <string name="upload">Upload</string>
    <string name="logout">Logout</string>
    <string name="Map">Map</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="retry">Try again</string>
</resources>