<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:cardElevation="6dp"
    android:cardBackgroundColor="@android:color/white"
    android:radius="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageView
            android:id="@+id/imgStory"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:src="@android:drawable/ic_input_add"
            android:contentDescription="@string/story_image"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="14dp"
            android:paddingEnd="8dp">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_story"
                android:textColor="@color/blue"
                android:textStyle="bold"
                android:textSize="18sp"
                android:maxLines="2"
                android:ellipsize="end" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description_story"
                android:textSize="14sp"
                android:layout_marginTop="4dp"
                android:maxLines="3"
                android:ellipsize="end" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
