<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    tools:context=".ui.signup.RegisterActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/logo_stoup" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:indeterminateTint="@color/peach"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/layout_container"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:orientation="vertical"
        android:layout_marginTop="90dp"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/white_bg"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/simple_caption"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:fontFamily="@font/inter"/>
<!--            android:alpha="0"-->
<!--            tools:alpha="100" />-->

        <TextView
            android:id="@+id/tv_caption2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/simple_caption1"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="40dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/blue"
            android:fontFamily="@font/inter" />
<!--            android:alpha="0"-->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <EditText
                android:id="@+id/ed_username"
                android:layout_width="280dp"
                android:layout_height="48dp"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/inter"
                android:hint="Username"
                android:inputType="text"/>
<!--                android:alpha="0"-->
<!--                tools:alpha="100" />-->

            <com.submission.stoup.ui.custom.CustomEdtEmail
                android:id="@+id/ed_email"
                android:layout_width="280dp"
                android:layout_height="48dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/inter"
                android:hint="Email"
                android:inputType="textEmailAddress"/>
<!--                android:alpha="0"-->
<!--                tools:alpha="100" />-->

            <com.submission.stoup.ui.custom.CustomEdtPw
                android:id="@+id/ed_password"
                android:layout_width="280dp"
                android:layout_height="48dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/inter"
                android:hint="Password"
                android:inputType="textPassword"/>
<!--                android:alpha="0"-->
<!--                tools:alpha="100" />-->
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/inter"
                android:text="@string/register"
                android:backgroundTint="@color/blue"
                app:cornerRadius="10dp"/>

            <TextView
                android:id="@+id/tv_have_acc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:text="@string/have_acc"
                android:fontFamily="@font/inter"
                android:textSize="14sp"
                android:layout_gravity="center" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
